# VK_LAYER_Lawrence_Device_Spoof

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/VkFakeLayer/: CMakeLists.txt  UnixManifest.json  VK_LAYER_Lawrence_Device_Spoof.json  VkFakeLayer.cpp  VkFakeLayer.def
Source/VkTestApplication/: CMakeLists.txt  Main.cpp
